tests/fixtures/positive/release-engineering/HardcodedLogTag.kt
package com.example.releaseengineering

import android.util.Log

class MainActivity {
    fun load() {
        Log.d("MainActivity", "loading")
    }
}
