tests/fixtures/negative/release-engineering/HardcodedLogTag.kt
package com.example.releaseengineering

import android.util.Log

class MainActivity {
    companion object {
        private const val TAG = "MainActivity"
    }

    fun load() {
        Log.d(TAG, "loading")
    }
}
